--- a/Webpage.html
+++ b/Webpage.html
@@ -146,7 +146,7 @@ go directly to the children themselves. <br>
 <marquee style="color:white">Today's Genreation Is Tommorow's Future,So Do Care For Them.</marquee>
 <hr>
 
-<h2 align="center" style="color:Magenta;font-size:250%;font-family:Times New Roman; line-height:0.1">CONTACT US</h2>
+<h2 align="center" style="color:Pink;font-size:250%;font-family:Times New Roman; line-height:0.1">CONTACT US</h2>
 <p style="font-family:Arial Rounded MT;color:DarkKhaki">
 We Would Love to Hear from You
 Please write or call us with your questions or comments
