Color changed of WHAT WE DO heading
Color Changed from WHITESMOKE TO RED.

--- a/Webpage.html
+++ b/Webpage.html
@@ -73,7 +73,7 @@ All the pictures and logs of our activities can be checked on our Instagram and 
 <marquee style="color:white">Educate Your Child , Educate Your Coming Generations.</marquee>
 <hr>
 
-<h2 align="center" style="color:WhiteSmoke;font-size:250%;font-family:Times New Roman; line-height:0.1">What We Do?</h2>
+<h2 align="center" style="color:Red;font-size:250%;font-family:Times New Roman; line-height:0.1">What We Do?</h2>
 <div class="row">
 
   <div class="column">
